--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
     </div>
     </main>
     <footer>
-        <p> &copy; 2024 Jose Emilio Zamarron Sanchez - Mexico - </p>
+        <p> &copy; 2024 Waldo Mauricio Balvin Cupen</p>
         <p id="lastModified"></p>
     </footer>
-<script src="./scripts/getDates.js"></script>
+<script src="scripts/getDates.js"></script>
 <script src="./scripts/"></script>
 </body>
 </html>
